--- a/www/index.html
+++ b/www/index.html
@@ -221,8 +221,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
 </script>
 
-<paper-scroll-header-panel fixed="true" shadow="true">
-    <div class="paper-header" shadow="true">
+<paper-scroll-header-panel fixed="true">
+    <div class="paper-header">
 
             <paper-toolbar class="custom paper-header" justify="center">
                 <div class="title">Happly Hour</div>
