--- a/www/index.html
+++ b/www/index.html
@@ -213,7 +213,7 @@ document.addEventListener('WebComponentsReady', function () {
 
             var aReponseApi = request.detail.response;
             var hostElement = document.getElementById('paperCard');
-            createCards(aReponseApi, hostElement, gMap, gDirection, tabs);
+            createCards(aReponseApi, hostElement, gMap, gDirection, tabs, crd);
 
         });
 
