--- a/www/index.html
+++ b/www/index.html
@@ -164,6 +164,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 document.addEventListener('WebComponentsReady', function () {
 
     var button = document.getElementById('barFinder');
+    button.firstChild.style.height = '50px';
+    button.firstChild.style.width = '50px';
 
     button.addEventListener('click', function () {
         var spinner    = document.querySelector('paper-spinner');
@@ -267,7 +269,7 @@ document.addEventListener('WebComponentsReady', function () {
             <div class="containerCustom">
 
                 <div class="flex-center-justified" id="finderMenu">
-                    <paper-button id="barFinder" raised class="">Find bars around me</paper-button>
+                    <paper-fab id="barFinder" style="left:35%;bottom:40%;height:120px;width:120px;" src="/android/www/img/beer.png"></paper-fab>
                     <paper-spinner class="multi"></paper-spinner>
                 </div>
 
