fix position of button

--- a/www/index.html
+++ b/www/index.html
@@ -73,6 +73,10 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
             margin: 0;
         }
 
+        #barFinder {
+            @apply(--layout-center-justified);
+        }
+
         paper-scroll-header-panel {
             height: 100%;
         }
@@ -164,10 +168,11 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 document.addEventListener('WebComponentsReady', function () {
 
     var button = document.getElementById('barFinder');
-    button.style.left = '35%';
+    button.style.left = '50%';
     button.style.bottom = '40%';
     button.style.height = '120px';
     button.style.width = '120px';
+    button.style.transform = 'translateX(-50%)';
     button.firstChild.style.height = '50px';
     button.firstChild.style.width = '50px';
 
