--- a/www/index.html
+++ b/www/index.html
@@ -169,10 +169,11 @@ document.addEventListener('WebComponentsReady', function () {
 
     var button = document.getElementById('barFinder');
     button.style.left = '50%';
+    button.style.top = '50%';
     button.style.bottom = '40%';
     button.style.height = '120px';
     button.style.width = '120px';
-    button.style.transform = 'translateX(-50%)';
+    button.style.transform = 'translate(-50%,-50%)';
     button.firstChild.style.height = '50px';
     button.firstChild.style.width = '50px';
 
