--- a/www/index.html
+++ b/www/index.html
@@ -279,7 +279,7 @@ document.addEventListener('WebComponentsReady', function () {
             <div class="containerCustom">
 
                 <div class="flex-center-justified" id="finderMenu">
-                    <paper-fab id="barFinder" src="/android/www/img/beer.png"></paper-fab>
+                    <paper-fab id="barFinder" src="img/beer.png"></paper-fab>
                     <paper-spinner class="multi"></paper-spinner>
                 </div>
 
